--- a/Practica_2/TP1_IgnacioLembo_RN/legacy-styles/pr.sty
+++ b/Practica_2/TP1_IgnacioLembo_RN/legacy-styles/pr.sty
@@ -5,7 +5,7 @@
 \newcommand*{\journalname}{Ignacio Lembo Ferrari}
 
 % Set journal article types
-\newcommand*{\journalshorttype}{FISCOM}
+\newcommand*{\journalshorttype}{Redes Neuronales}
 \newcommand*{\journallongtype}{a}
 
 % Set color for header, authors, table lines
